--- a/index.html
+++ b/index.html
@@ -812,13 +812,124 @@
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
                 </div>
-                <h5 class="clint-info">Alina Parker <span>Ceo GTD</span></h5>
+                <h5 class="clint-info">
+                  Kevin Andrew <span>Manager, Rex</span>
+                </h5>
               </div>
             </div>
           </div>
         </div>
       </section>
       <!-- Testimonial Section End -->
+      <!-- Brand & Newsletter Section Start -->
+      <section class="container">
+        <div class="content">
+          <div class="row">
+            <!-- Brand Section Start -->
+            <div class="col-md-4"></div>
+            <div class="col-lg-8 col-md-12">
+              <div class="row brands">
+                <div class="col-6 col-md-3 brands-col">
+                  <img src="./assets/images/brands/01.png" alt="" />
+                </div>
+                <div class="col-6 col-md-3 brands-col">
+                  <img src="./assets/images/brands/02.png" alt="" />
+                </div>
+                <div class="col-6 col-md-3 brands-col">
+                  <img src="./assets/images/brands/03.png" alt="" />
+                </div>
+                <div class="col-6 col-md-3 brands-col">
+                  <img src="./assets/images/brands/04.png" alt="" />
+                </div>
+              </div>
+            </div>
+            <!-- Brand Section End -->
+            <!-- Newsletter Section Start -->
+            <div class="row newsletter-section">
+              <div class="col-md-3">
+                <img
+                  class="newsLater-img"
+                  src="./assets/images/banboo-foot-cart.png"
+                  alt=""
+                />
+              </div>
+              <div class="col-md-9">
+                <div class="newsletter-from">
+                  <from>
+                    <label for="email">Subscribe to Newsletter</label>
+                    <div class="from-element">
+                      <input type="email" name="email" id="email" />
+                      <button type="submit" class="btn btn-primary">
+                        Subscribe now
+                      </button>
+                    </div>
+                  </from>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Brand & Newsletter Section End -->
+
+      <!-- Footer Start  -->
+      <footer class="container-fluid space-top">
+        <div class="content space-top">
+          <div class="row">
+            <div class="col-md-3">
+              <h5 class="col-title">Store Location</h5>
+              <ul class="col-list">
+                <li>Address:</li>
+                <li>12 King Street Melbourne, 3000, Australia</li>
+                <li>Email:</li>
+                <li>info@yourdomain.com</li>
+                <li>Phone:</li>
+                <li>+123456789</li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <h5 class="col-title">Useful Links</h5>
+              <ul class="col-list">
+                <li><a href="">About US</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Checkout</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Service</a></li>
+                <li><a href="">Shop</a></li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <h5 class="col-title">Categories</h5>
+              <ul class="col-list">
+                <li><a href="">Fruits & Vegetable</a></li>
+                <li><a href="">Dairy Products</a></li>
+                <li><a href="">Package Foods</a></li>
+                <li><a href="">Beverage</a></li>
+                <li><a href="">Health & Wellness</a></li>
+                <li><a href="">Meet Varieties</a></li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <h5 class="col-title">Opening Hours</h5>
+              <ul class="col-list">
+                <li>
+                  <p><strong>Monday - Saturday</strong></p>
+                  <p>12.00- 14.45</p>
+                </li>
+                <li>
+                  <p><strong>Sunday - Thursday</strong></p>
+                  <p>10.00- 14.45</p>
+                </li>
+                <li>
+                  <p><strong>Friday - Saturday</strong></p>
+                  <p>17.00- 14.45</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- Footer End -->
     </main>
 
     <!-- Script Files -->
