--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/responsive.css" />
   </head>
-  <body>
+  <body class="home-page">
     <!-- Hero Section Start -->
     <header class="container-fluid hero-fluid">
       <div class="content hero-section">
@@ -859,7 +859,12 @@
                 <from>
                   <label for="email">Subscribe to Newsletter</label>
                   <div class="from-element">
-                    <input type="email" name="email" id="email" />
+                    <input
+                      placeholder="Please Input your Email address"
+                      type="email"
+                      name="email"
+                      id="email"
+                    />
                     <button type="submit" class="btn btn-primary">
                       Subscribe now
                     </button>
